# VineMatch

./: .gitignore  .we_storage_state.json  Makefile  README.md  pyproject.toml
.we_profile/: Local State
.we_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Shortcuts  Web Data
.we_profile/Default/Cache/Cache_Data/: data_0  data_1  data_2  f_000001  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_00000b  f_00000c  index
.we_profile/Default/Code Cache/js/: 038bd80084a18e7d_0  1832e3d3720431c3_0  23be2971800b79c6_0  4215457ba761b67b_0  47ed5a307135aeaf_0  4d10986b064c1a02_0  536edb687b68c6df_0  7cdd6d3e5d511575_0  87555663ac8e73fe_0  8eb03d660d72f5fc_0  d9df3ae27e15e003_0  e417617d08b41259_0  f301b55cbb6d033e_0
.we_profile/Default/Code Cache/js/index-dir/: the-real-index
.we_profile/Default/Code Cache/wasm/index-dir/: the-real-index
.we_profile/Default/DawnGraphiteCache/: data_1  index
.we_profile/Default/DawnWebGPUCache/: data_1  index
.we_profile/Default/Extension Rules/: LOG
.we_profile/Default/Extension Scripts/: LOG
.we_profile/Default/Extension State/: LOG  LOG.old
.we_profile/Default/GCM Store/: LOG
.we_profile/Default/GCM Store/Encryption/: LOG
.we_profile/Default/GPUCache/: data_1  index
.we_profile/Default/Local Storage/leveldb/: LOG  LOG.old
.we_profile/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
.we_profile/Default/Session Storage/: LOG  LOG.old
.we_profile/Default/Sessions/: Session_13400403320917545  Session_13400403336976201  Tabs_13400403259890491  Tabs_13400403320917540
.we_profile/Default/Shared Dictionary/cache/index-dir/: the-real-index
.we_profile/Default/Site Characteristics Database/: LOG
.we_profile/Default/Sync Data/LevelDB/: LOG  LOG.old
.we_profile/Default/shared_proto_db/: LOG  LOG.old
.we_profile/Default/shared_proto_db/metadata/: LOG  LOG.old
.we_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  index
.we_profile/GraphiteDawnCache/: data_1  index
.we_profile/ShaderCache/: data_1  index
.we_profile/segmentation_platform/: ukm_db
scripts/: scrape_wineenthusiast_playwright.py
src/VineMatch/: cli.py
src/VineMatch/providers/scrapers/: __init__.py  factory.py  we_playwright.py
