[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vinematch"
version = "0.1.0"
description = "Address → (lat,lon) → recent weather + soil → grape varietal suitability"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "George Jieh" }]
license = { file = "LICENSE" }

# Keep core light; add extras as needed.
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "requests>=2.31",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.8",
  "ruff>=0.5",
  "black>=24.4",
]
geo = [
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
]
ui = [
  "gradio>=4.38",
]
notebooks = [
  "jupyterlab>=4.0",
  "ipykernel>=6.29",
  "matplotlib>=3.8",
  "pyarrow>=15",
]

[project.scripts]
vinematch = "vinematch.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["vinematch*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "-q"
