[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vinematch"
version = "0.1.0"
description = "Address → (lat,lon) → recent weather + soil → grape varietal suitability"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "George Jieh" }]
license = { file = "LICENSE" }

# All runtime deps in one place so `pip install -e .` is enough.
dependencies = [
  # Core data & ML
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "requests>=2.31",
  "pydantic>=2.7",
  "pyarrow>=15",

  # Scraper
  "playwright>=1.40",

  # Geospatial stack
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",

  # UI (Gradio Space / local demo)
  "gradio>=4.38",

  # Notebooks & plots
  "jupyterlab>=4.0",
  "ipykernel>=6.29",
  "matplotlib>=3.8",

  # Optional data validation used in src/vinematch/features/schema.py (safe to keep)
  "pandera>=0.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.8",
  "ruff>=0.5",
  "black>=24.4",
  "nbstripout>=0.6",
  "pre-commit>=3.7",
]

[project.scripts]
vinematch = "vinematch.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["vinematch*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]
ignore = ["D105", "D107"]  # allow missing docstrings for magic methods and __init__

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "-q"
